[package]
name = "brokaw"
version = "0.2.1-alpha.0"
description = "📰 An NNTP client liberary. More at 11! 📰"
authors = ["Samani G. Gikandi <samani@gojulas.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sgg/brokaw"
documentation = "https://docs.rs/brokaw"
readme = "README.md"

keywords = ["nntp", "netnews", "usenet"]
categories = [ "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
log = "0.4.8"
native-tls = "0.2.4"
nom = "5.1"
num_enum = "0.5.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
rpassword = "4.0.5"
structopt = "0.3.14"
doc-comment = "0.3.3"
